--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: CreditsLib
 description: A starting point for Dart libraries or applications.
 version: 0.0.1
 #homepage: https://www.example.com
-#author: jenny <email@example.com>
+#author: jr <email@example.com>
 
 environment:
   sdk: '>=1.20.1 <2.0.0'
