--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,3 +16,5 @@ dev_dependencies:
       git: git://github.com/FarragoFiction/RenderingLib.git
   DollLibCorrect:
       git:  git://github.com/FarragoFiction/DollLibCorrect.git
+  CommonLib:
+              git: git://github.com/FarragoFiction/CommonLib.git
