--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,15 @@ version: 0.0.1
 #author: jr <email@example.com>
 
 environment:
-  sdk: '>=1.20.1 <2.0.0'
+  sdk: '>=2.2.0 <3.0.0'
 
 #dependencies:
 #  path: ^1.4.1
 
 dev_dependencies:
-  test: ^0.12.0
+  build_runner: ^1.0.0
+  build_test: ^0.10.2
+  build_web_compilers: ^0.4.0
   RenderingLib:
       git: git://github.com/FarragoFiction/RenderingLib.git
   DollLibCorrect:
