--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,15 @@ version: 0.0.1
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.4.1
+dependencies:
+  RenderingLib:
+    git: git://github.com/FarragoFiction/RenderingLib.git
+  DollLibCorrect:
+    git:  git://github.com/FarragoFiction/DollLibCorrect.git
+  CommonLib:
+    git: git://github.com/FarragoFiction/CommonLib.git
 
 dev_dependencies:
   build_runner: ^1.0.0
   build_test: ^0.10.2
   build_web_compilers: ^0.4.0
-  RenderingLib:
-      git: git://github.com/FarragoFiction/RenderingLib.git
-  DollLibCorrect:
-      git:  git://github.com/FarragoFiction/DollLibCorrect.git
-  CommonLib:
-              git: git://github.com/FarragoFiction/CommonLib.git
