--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,21 @@
 name: CreditsLib
 description: A starting point for Dart libraries or applications.
-version: 0.0.1
-#homepage: https://www.example.com
-#author: jr <email@example.com>
+version: 2.8.0
+homepage: https://github.com/FarragoFiction/CharacterLib
+author: jadedResearcher, paradoxLands
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.8.0 <3.0.0'
 
 dependencies:
     DollLibCorrect:
-      git:
-        url: git://github.com/FarragoFiction/DollLibCorrect.git
-        ref: Dart-2.2.0
+      git: git://github.com/FarragoFiction/DollLibCorrect.git
     CommonLib:
-      git:
-        url: git://github.com/FarragoFiction/CommonLib.git
-        ref: Dart-2.2.0
+      git: git://github.com/FarragoFiction/CommonLib.git
     RenderingLib:
-      git:
-        url: git://github.com/FarragoFiction/RenderingLib.git
-        ref: Dart-2.2.0
+      git: git://github.com/FarragoFiction/RenderingLib.git
 
 dev_dependencies:
-  build_runner: ^1.0.0
-  build_test: ^0.10.2
-  build_web_compilers: ^0.4.0
+  build_runner: ^1.6.0
+  build_web_compilers: ^2.3.0
+  test: any
